# kube-atlas

./: .bazelrc  .gitignore  .goreleaser.yml  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  TODO.md  WORKSPACE  go.mod  go.sum  main.go  version.bzl
.agola/: config.jsonnet
cmd/: BUILD.bazel  add.go  init.go  render.go  root.go  upgrade.go  version.go
cmd/add/: BUILD.bazel  add.go
cmd/bootstrap/: BUILD.bazel  bootstrap.go
cmd/fetch/: BUILD.bazel  fetch.go
cmd/render/: BUILD.bazel  render.go
cmd/start/: BUILD.bazel  start.go
cmd/version/: BUILD.bazel  version.go
examples/: kube-atlas.yaml
pkg/bootstrap/: BUILD.bazel  interactive.go
pkg/config/: BUILD.bazel  config.go  config_test.go
pkg/exec/: BUILD.bazel  exit_error.go  runner.go
pkg/exec/helm/: BUILD.bazel  exec.go
pkg/exec/kustomize/: BUILD.bazel  exec.go
pkg/fileutil/: BUILD.bazel  filetuil_test.go  fileutil.go
pkg/helmexec/: BUILD.bazel  exec.go  helmexec.go  runner.go
pkg/state/: BUILD.bazel  state.go
