load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:version.bzl", "VERSION")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/lwolf/kube-atlas/cmd",
    visibility = ["//visibility:public"],
    x_defs = {
        "Version": VERSION,
        "GitCommit": "{STABLE_GIT_COMMIT}",
    },
    deps = [
        "//cmd/add:go_default_library",
        "//cmd/fetch:go_default_library",
        "//cmd/render:go_default_library",
        "//cmd/start:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
