load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["render.go"],
    importpath = "github.com/lwolf/kube-atlas/cmd/render",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fileutil:go_default_library",
        "//pkg/helmexec:go_default_library",
        "//pkg/state:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
