load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstrap.go",
        "interactive.go",
    ],
    importpath = "github.com/lwolf/kube-atlas/pkg/bootstrap",
    visibility = ["//visibility:public"],
    deps = ["@com_github_manifoldco_promptui//:go_default_library"],
)
