load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "exit_error.go",
        "runner.go",
    ],
    importpath = "github.com/lwolf/kube-atlas/pkg/exec",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:go_default_library"],
)
