load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["exec.go"],
    importpath = "github.com/lwolf/kube-atlas/pkg/exec/kustomize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/exec:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
    ],
)
